--- a/javascript/url/manipulateHash/index.html
+++ b/javascript/url/manipulateHash/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bootstrap 101 Template</title>
+        <title>Manipulate Hash - URL - JavaScript - Example - Stev Leibelt</title>
 
         <!-- Bootstrap -->
         <link href="../../../vendor/bootstrap/bootstrap-3.1.1-dist/css/bootstrap.min.css" rel="stylesheet">
