--- a/javascript/jquery/event/index.html
+++ b/javascript/jquery/event/index.html
@@ -11,7 +11,7 @@
     </div>
     <input type="hidden" id="triggerEventTarget" />
 
-    <script type="text/javascript" src="../../../vendor/jquery/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="../../../vendor/javascript/jquery/jquery-2.1.0.min.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function() {
             var log = jQuery('#log');
