--- a/javascript/url/manipulateHash/index.html
+++ b/javascript/url/manipulateHash/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="../../../vendor/jquery/jquery-2.1.0.min.js"></script>
+        <script type="text/javascript" src="../../../vendor/javascript/jquery/jquery-2.1.0.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="../../../vendor/bootstrap/bootstrap-3.1.1-dist/js/bootstrap.min.js"></script>
 
