--- a/javascript/jquery/easy-ticker/index.html
+++ b/javascript/jquery/easy-ticker/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>jquery vertical ticker example</title>
+    <title>jquery easy-ticker example</title>
 </head>
     <body>
     <div id="ticker">
