--- a/javascript/display/toggle/index.html
+++ b/javascript/display/toggle/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!-- 
+    @see:
+        https://bufferwall.com/petersirka/2015-03-12-tutorial-simple-html-toggle-button/
+-->
 <html lang="en">
     <head>
         <meta charset="utf-8">
