--- a/javascript/display/revealPassword.html
+++ b/javascript/display/revealPassword.html
@@ -7,7 +7,7 @@
     </form>
     <script>
       document.getElementById('reveal-my-password').onclick = function(ev) {
-          passwordElement = document.getElementById('my-password')
+          let passwordElement = document.getElementById('my-password')
           
           passwordElement.type = (passwordElement.type === 'password') ? 'text' : 'password';
           ev.target.innerHTML = (passwordElement.type === 'password') ? '&#9673;' : '&#9678;';
